--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -3,12 +3,12 @@
   color: var(--white);
   padding: 2em 0;
   text-align: center;
-  svg {
+  &__logo {
     display: block;
     margin: auto;
     margin-bottom: 2em;
   }
-  .more a {
+  &__links a {
     display: block;
     color: var(--gray);
     text-decoration: none;
@@ -24,5 +24,41 @@
   &__copyright {
     margin-top: 2.5em;
     color: var(--grayBlue);
+  }
+  @media screen and (min-width: 1024px) {
+    .wrapper {
+      display: grid;
+      grid-column-gap: 7em;
+      grid-template-columns: 200px 1fr 400px;
+      grid-template-areas: 
+        "logo links button"
+        "social links copyrigth";
+    }
+    &__links {
+      // border: 1px solid red;
+      grid-area: links;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-items: start;
+    }
+    &__logo {
+      // border: 1px solid green;
+      grid-area: logo;
+      margin: initial;
+    }
+    &__social {
+      // border: 1px solid pink;
+      grid-area: social;
+    }
+    &__button {
+      // border: 1px solid white;
+      grid-area: button;
+      text-align: right;
+    }
+    &__copyright {
+      // border: 1px solid blue;
+      grid-area: copyrigth;
+      text-align: right;
+    }
   }
 }
