--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,6 +1,29 @@
 .header {
   // border: 1px solid red;
-  padding: 1em 1.5em;
+  padding: 1em 0;
   display: flex;
   justify-content: space-between;
+  .wrapper {
+    width: 100%;
+  }
+  &__logo {
+    align-self: center;
+  }
+  .btn {
+    display: none;
+  }
+  &__content {
+    display: flex;
+    justify-content: space-between;
+  }
+  @media screen and(min-width: 1024px) {
+    .btn {
+      display: inline;
+    }
+    &__content {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 }
