--- a/src/sass/hero.scss
+++ b/src/sass/hero.scss
@@ -1,16 +1,57 @@
 .hero {
   text-align: center;
   padding-bottom: 5em;
+  background: var(--lightGray);
   .copy {
     margin-bottom: 2.5em;
   }
   &__image {
     height: 300px;
     margin: 0 calc(-1 * var(--wrapperSpace));
-    background: 
-      url('../images/image-mockups.png') center bottom no-repeat,
-      url('../images/bg-intro-mobile.svg') center no-repeat;
-    background-size: 345px, cover;
+    background: url('../images/bg-intro-mobile.svg') center no-repeat;
+    background-size: 345px;
     margin-bottom: 1.2em;
+  }
+  @media screen and (min-width: 768px) {
+    text-align: left;
+    background: url('../images/bg-intro-desktop.svg') left 650px top -290px no-repeat;
+    background-size: cover;
+    min-height: 550px;
+    box-sizing: border-box;
+    &__content {
+      position: relative;
+      border: 1px solid red;
+      display: grid;
+      align-items: center;
+      min-height: 550px;
+      grid-template-areas: "description image";
+      grid-template-columns: 480px 1fr;
+    }
+    &__description {
+      border: 1px solid red;
+    }
+    &__image {
+      grid-area: image;
+      min-height: inherit;
+      position: absolute;
+      border: 1px solid purple;
+      width: 500px;
+      // left: 550px;
+      height: 768px;
+      background: url('../images/image-mockups.png') left bottom no-repeat;
+      background-size: cover;
+    }
+  }
+  @media screen and (min-width: 1024px) {
+    // background: url('../images/bg-intro-desktop.svg') left 650px top -290px no-repeat;
+    &__content {
+      border: 10px solid pink;
+    }
+    &__image {
+      background: url('../images/image-mockups.png')  -100px bottom no-repeat;
+      width: 730px;
+      left: 0;
+      right: 0;
+    }
   }
 }
