--- a/src/sass/latestArticles.scss
+++ b/src/sass/latestArticles.scss
@@ -2,7 +2,8 @@
   padding: 5em 0;
   background: var(--lightGray);
   .title {
-    text-align: center;
+    text-align: left;
+    margin-bottom: 1em;
   }
   &__grid {
     display: grid;
@@ -26,6 +27,21 @@
       color: var(--grayBlue);
       margin-bottom: 1em;
       display: block;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    &__item {
+      padding: 1em;
+    }
+    &__grid {
+      display: grid;
+      grid-column-gap: 30px;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media screen and (min-width: 1024px) {
+    &__grid {
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 }
