--- a/src/sass/menu.scss
+++ b/src/sass/menu.scss
@@ -1,5 +1,21 @@
 .menu {
   // border: 3px solid blue;
-  width: 40px;
-  background: url("../images/icon-hamburger.svg") no-repeat center;
+  list-style: none;
+  display: none;
+  &__button {
+    height: 40px;
+    width: 40px;
+    background: url("../images/icon-hamburger.svg") no-repeat center;
+  }
+  a {
+    text-decoration: none;
+    color: var(--grayBlue);
+    padding: 0 .8em;
+  }
+  @media screen and (min-width: 1024px) {
+    display: flex;
+    &__button {
+      display: none;
+    }
+  }
 }
