--- a/src/sass/why.scss
+++ b/src/sass/why.scss
@@ -1,7 +1,7 @@
 .why {
   text-align: center;
   background: var(--gray);
-  padding: 5em;
+  padding: 5em 0;
   .copy {
     margin-bottom: 4em;
   }
@@ -12,6 +12,19 @@
     }
     img {
       margin-bottom: 1.5em;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    text-align: left;
+    &__grid {
+      display: grid;
+      grid-column-gap: 1em;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media screen and (min-width: 1000px) {
+    &__grid {
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 }
