--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,12 +1,36 @@
 .header {
-  padding: 1em 1.5em;
+  padding: 1em 0;
   display: flex;
   justify-content: space-between;
+}
+.header .wrapper {
+  width: 100%;
+}
+.header__logo {
+  align-self: center;
+}
+.header .btn {
+  display: none;
+}
+.header__content {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (min-width: 1024px) {
+  .header .btn {
+    display: inline;
+  }
+  .header__content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .hero {
   text-align: center;
   padding-bottom: 5em;
+  background: var(--lightGray);
 }
 .hero .copy {
   margin-bottom: 2.5em;
@@ -14,20 +38,80 @@
 .hero__image {
   height: 300px;
   margin: 0 calc(-1 * var(--wrapperSpace));
-  background: url("../images/image-mockups.png") center bottom no-repeat, url("../images/bg-intro-mobile.svg") center no-repeat;
-  background-size: 345px, cover;
+  background: url("../images/bg-intro-mobile.svg") center no-repeat;
+  background-size: 345px;
   margin-bottom: 1.2em;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    text-align: left;
+    background: url("../images/bg-intro-desktop.svg") left 650px top -290px no-repeat;
+    background-size: cover;
+    min-height: 550px;
+    box-sizing: border-box;
+  }
+  .hero__content {
+    position: relative;
+    border: 1px solid red;
+    display: grid;
+    align-items: center;
+    min-height: 550px;
+    grid-template-areas: "description image";
+    grid-template-columns: 480px 1fr;
+  }
+  .hero__description {
+    border: 1px solid red;
+  }
+  .hero__image {
+    grid-area: image;
+    min-height: inherit;
+    position: absolute;
+    border: 1px solid purple;
+    width: 500px;
+    height: 768px;
+    background: url("../images/image-mockups.png") left bottom no-repeat;
+    background-size: cover;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .hero__content {
+    border: 10px solid pink;
+  }
+  .hero__image {
+    background: url("../images/image-mockups.png") -100px bottom no-repeat;
+    width: 730px;
+    left: 0;
+    right: 0;
+  }
 }
 
 .menu {
+  list-style: none;
+  display: none;
+}
+.menu__button {
+  height: 40px;
   width: 40px;
   background: url("../images/icon-hamburger.svg") no-repeat center;
+}
+.menu a {
+  text-decoration: none;
+  color: var(--grayBlue);
+  padding: 0 0.8em;
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    display: flex;
+  }
+  .menu__button {
+    display: none;
+  }
 }
 
 .why {
   text-align: center;
   background: var(--gray);
-  padding: 5em;
+  padding: 5em 0;
 }
 .why .copy {
   margin-bottom: 4em;
@@ -39,13 +123,29 @@
 .why__item img {
   margin-bottom: 1.5em;
 }
+@media screen and (min-width: 768px) {
+  .why {
+    text-align: left;
+  }
+  .why__grid {
+    display: grid;
+    grid-column-gap: 1em;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1000px) {
+  .why__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
 .latestArticles {
   padding: 5em 0;
   background: var(--lightGray);
 }
 .latestArticles .title {
-  text-align: center;
+  text-align: left;
+  margin-bottom: 1em;
 }
 .latestArticles__grid {
   display: grid;
@@ -71,6 +171,21 @@
   margin-bottom: 1em;
   display: block;
 }
+@media screen and (min-width: 768px) {
+  .latestArticles__item {
+    padding: 1em;
+  }
+  .latestArticles__grid {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .latestArticles__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
 .footer {
   background: var(--darkBlue);
@@ -78,12 +193,12 @@
   padding: 2em 0;
   text-align: center;
 }
-.footer svg {
+.footer__logo {
   display: block;
   margin: auto;
   margin-bottom: 2em;
 }
-.footer .more a {
+.footer__links a {
   display: block;
   color: var(--gray);
   text-decoration: none;
@@ -99,6 +214,35 @@
 .footer__copyright {
   margin-top: 2.5em;
   color: var(--grayBlue);
+}
+@media screen and (min-width: 1024px) {
+  .footer .wrapper {
+    display: grid;
+    grid-column-gap: 7em;
+    grid-template-columns: 200px 1fr 400px;
+    grid-template-areas: "logo links button" "social links copyrigth";
+  }
+  .footer__links {
+    grid-area: links;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: start;
+  }
+  .footer__logo {
+    grid-area: logo;
+    margin: initial;
+  }
+  .footer__social {
+    grid-area: social;
+  }
+  .footer__button {
+    grid-area: button;
+    text-align: right;
+  }
+  .footer__copyright {
+    grid-area: copyrigth;
+    text-align: right;
+  }
 }
 
 :root {
@@ -125,6 +269,8 @@ body {
 
 .wrapper {
   padding: 0 var(--wrapperSpace);
+  max-width: 1115px;
+  margin: auto;
 }
 
 .title {
