--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -2,6 +2,7 @@
   padding: 1em 0;
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 .header .wrapper {
   width: 100%;
@@ -88,6 +89,8 @@
 .menu {
   list-style: none;
   display: none;
+  padding: 0;
+  margin: 0;
 }
 .menu__button {
   height: 40px;
@@ -106,6 +109,40 @@
   .menu__button {
     display: none;
   }
+}
+.menu__item {
+  display: flex;
+  align-items: center;
+}
+.menu__checkbox {
+  display: none;
+}
+.menu__checkbox:checked ~ .menu__button {
+  background: url("../images/icon-close.svg") no-repeat center;
+}
+.menu__checkbox:checked ~ .menu {
+  display: block;
+  position: absolute;
+  padding: 1em;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: linear-gradient(to bottom, var(--darkBlue) 0%, transparent 100%);
+}
+.menu__checkbox:checked ~ .menu .menu__item:first-child a {
+  padding-top: 2em;
+  border-radius: 0.5em 0.5em 0 0;
+}
+.menu__checkbox:checked ~ .menu .menu__item:last-child a {
+  padding-bottom: 2em;
+  border-radius: 0 0 0.5em 0.5em;
+}
+.menu__checkbox:checked ~ .menu a {
+  background: white;
+  color: var(--darkBlue);
+  padding: 0.8em;
+  display: block;
+  text-align: center;
 }
 
 .why {
