--- a/src/sass/estilos.scss
+++ b/src/sass/estilos.scss
@@ -21,6 +21,7 @@ body {
   font-family: 'Public Sans', sans-serif;
   margin: 0;
   color: var(--grayBlue); 
+  overflow-x: hidden;
 }
 
 .is-hidden {
@@ -31,8 +32,6 @@ body {
   padding: 0 var(--wrapperSpace);
   max-width: 1115px;
   margin: auto;
-  // width: 100%;
-  // box-sizing: border-box;
 }
 
 @mixin title {
