--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -2,7 +2,10 @@
   padding: 1em 0;
   display: flex;
   justify-content: space-between;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+  background: var(--white);
 }
 .header .wrapper {
   width: 100%;
@@ -39,9 +42,12 @@
 .hero__image {
   height: 300px;
   margin: 0 calc(-1 * var(--wrapperSpace));
-  background: url("../images/bg-intro-mobile.svg") center no-repeat;
-  background-size: 345px;
+  background: url("../images/image-mockups.png") center bottom no-repeat, url("../images/bg-intro-mobile.svg") center no-repeat;
+  background-size: 345px, cover;
   margin-bottom: 1.2em;
+}
+.hero__img {
+  display: none;
 }
 @media screen and (min-width: 768px) {
   .hero {
@@ -53,36 +59,36 @@
   }
   .hero__content {
     position: relative;
-    border: 1px solid red;
     display: grid;
     align-items: center;
     min-height: 550px;
     grid-template-areas: "description image";
-    grid-template-columns: 480px 1fr;
-  }
-  .hero__description {
-    border: 1px solid red;
+    grid-template-columns: 370px 1fr;
   }
   .hero__image {
     grid-area: image;
     min-height: inherit;
     position: absolute;
-    border: 1px solid purple;
     width: 500px;
+    left: 0;
+    top: 0;
     height: 768px;
     background: url("../images/image-mockups.png") left bottom no-repeat;
     background-size: cover;
   }
 }
 @media screen and (min-width: 1024px) {
-  .hero__content {
-    border: 10px solid pink;
+  .hero__img {
+    display: block;
+    position: relative;
+    top: -150px;
+    z-index: 1;
   }
   .hero__image {
-    background: url("../images/image-mockups.png") -100px bottom no-repeat;
-    width: 730px;
-    left: 0;
+    background: none;
+    left: 150px;
     right: 0;
+    top: 0;
   }
 }
 
@@ -143,6 +149,7 @@
   padding: 0.8em;
   display: block;
   text-align: center;
+  flex: 1;
 }
 
 .why {
@@ -298,6 +305,7 @@ body {
   font-family: "Public Sans", sans-serif;
   margin: 0;
   color: var(--grayBlue);
+  overflow-x: hidden;
 }
 
 .is-hidden {
